# AlphaFold3-SeqVisToolkit

./: README.md  pyproject.toml
pymol_utils/: af3_plddt_color.py
src/alphafold3_seqvis_toolkit/: __init__.py  cli.py
src/alphafold3_seqvis_toolkit/modules/: __init__.py  confidence_metrics_plot.py  contact_map_comparison.py  contact_map_comparison_monomer.py  contact_map_comparison_multimer.py  contact_map_visualization_with_track.py  contact_map_visualization_without_track.py  custom_metric_track.py
src/alphafold3_seqvis_toolkit/utils/: track_utils.py
tests/test_data/CTCF_withDNA/: fold_flznwitha6csedna_job_request.json  fold_flznwitha6csedna_model_0.cif  fold_flznwitha6csedna_summary_confidences_0.json
tests/test_data/CTCF_withoutDNA/: fold_humanwithzn_job_request.json  fold_humanwithzn_model_0.cif  fold_humanwithzn_summary_confidences_0.json
tests/test_data/Multi_protein_complex/: 7W1M.cif  fold_ctcf_2_dna_model_1.cif  fold_ctcf_2_nodna_model_0.cif  simulated_tracks.py
tests/test_output/confidence/: flznwitha6csedna_global_confidence_SCALAR_measures.tsv  flznwitha6csedna_global_confidence_chain_ptm_iptm.tsv  flznwitha6csedna_local_confidence_overall_atom_plddt_statistics.tsv  humanwithzn_global_confidence_SCALAR_measures.tsv  humanwithzn_global_confidence_chain_ptm_iptm.tsv  humanwithzn_local_confidence_overall_atom_plddt_statistics.tsv
tests/test_output/visualization/track/: simulated_tracks.bed  simulated_tracks_color_config.json
