[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "alphafold3-seqvis-toolkit"
version = "0.2.0"
description = "Visualization & analysis toolkit for AlphaFold3 outputs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Joe Hoye Dow"}] 

# use pip show to check
dependencies = [
  "biopython>=1.85",
  "numpy>=2.2.0",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",   
  "typer>=0.20.0", 
  "pandas>=2.3.1"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine"]

[project.scripts]
af3-vis = "alphafold3_seqvis_toolkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/alphafold3_seqvis_toolkit"]